# ros2_car

./: README.md
prj1/src/Homework 1/control_service/: package.xml
prj1/src/Homework 1/control_service/control_service/: control_ser.py
prj1/src/Homework 1/my_interfaces/: CMakeLists.txt
prj1/src/garbage_classification/: CMakeLists.txt
prj1/src/garbage_classification/src/: server.cpp
prj1/src/garbage_classification/srv/: GarbageClassification.srv
prj1/src/topic_demo/: package.xml
prj1/src/topic_demo/launch/: topic_demo.launch.py
prj1/src/topic_demo/topic_demo/: subscriber.py
prj2/src/cv_pkg/: CMakeLists.txt  package.xml
prj2/src/cv_pkg/src/: cv_face_detect.cpp  cv_follow.cpp  cv_hsv.cpp  cv_image.cpp
prj2/src/pc_pkg/: CMakeLists.txt  package.xml
prj2/src/pc_pkg/src/: pc_data.cpp  pc_objects.cpp
prj3/: map.pgm  map.yaml
prj3/src/imu_pkg/: CMakeLists.txt  package.xml
prj3/src/imu_pkg/src/: imu_behavior.cpp  imu_data.cpp
prj3/src/lidar_pkg/: CMakeLists.txt  package.xml
prj3/src/lidar_pkg/src/: lidar_behavior.cpp  lidar_data.cpp
prj3/src/slam_pkg/: CMakeLists.txt  package.xml
prj3/src/slam_pkg/launch/: slam.launch.py
prj4/src/nav_pkg/: CMakeLists.txt  package.xml
prj4/src/nav_pkg/launch/: nav.launch.py  waypoint_nav.launch.py
prj4/src/nav_pkg/src/: waypoint_navigation.cpp
src/Homework 1/control_service/: setup.py
src/Homework 1/control_service/control_service/: control_cli.py  control_ser.py
src/Homework 1/my_interfaces/: package.xml
src/garbage_classification/: package.xml
src/garbage_classification/src/: client.cpp
src/topic_demo/: README  setup.cfg  setup.py
src/topic_demo/topic_demo/: publisher.py  subscriber.py
